--- a/about_lab/style.css
+++ b/about_lab/style.css
@@ -1,8 +1,54 @@
-*{
-    background-color: #d99ef3;
-opacity: 1;
-background-image:  linear-gradient(135deg, #cdeef0 25%, transparent 25%), linear-gradient(225deg, #cdeef0 25%, transparent 25%), linear-gradient(45deg, #cdeef0 25%, transparent 25%), linear-gradient(315deg, #cdeef0 25%, #d99ef3 25%);
-background-position:  29px 0, 29px 0, 0 0, 0 0;
-background-size: 58px 58px;
-background-repeat: repeat;
+body{
+   background-image:url("images/pink_background.jpg");
+    background-size: cover;
+    background-repeat: repeat;
+    text-align: center;
+    font-family:'Courier New', Courier, monospace;
+
+    
+}
+header{
+    text-align: center;
+}
+p{
+    text-align: center;
+          
+}
+.image-row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 200px;
+   
+  }
+  .images {
+    display: flex;
+    justify-content: space-between;
+    align-items: space-between;
+    width: 45%;
+    height: 200px;
+   
+
+  }
+.hobbies{
+    max-width: 200px;
+    border: 5px solid black;
+    border-radius: 50px;
+    object-fit: cover;
+    border-radius:10px;
+    padding:10px auto;
+    margin:10px auto;
+
+   
+}
+a{
+    text-decoration: none;
+
+
+}
+
+
+footer{
+   
+    text-align: center;
 }
